# apfs-fuse-embedded

./: .gitmodules  .gitmodules-prep  CMakeLists.txt
ApfsLib/: AesXts.cpp  ApfsContainer.cpp  ApfsContainer.h  ApfsVolume.h  BTree.h  Device.cpp  DeviceDMG.cpp  DeviceUBoot.cpp  DeviceUBoot.h  Endian.h  GptPartitionMap.cpp  GptPartitionMap.h  PList.cpp  PList.h  Util.cpp
cmake/: aarch64-none-elf-clang.toolchain
